--- a/notes.tex
+++ b/notes.tex
@@ -9,8 +9,8 @@
 \DeclareMathOperator\colim{colim}
 % \DeclareMathOperator\lim{lim}
 
-\title{The theory of logoi}
-\author{Mathieu Anel (notes by Jon Sterling)}
+\title{The theory of logoi (M.\ Anel)}
+\author{Notes by Jon Sterling}
 \begin{document}
 \maketitle
 \tableofcontents
@@ -144,6 +144,8 @@ $\Mor[\phi]{\Yo{B}}{\UU}$ are the ``same'' as families $\overline{\phi}\in
 \UU(B)=C/B$. $\UU$ classifies families and all morphisms (not only isomorphisms
 as $\U$, or only monos as $\Omega$).
 
+\section{Descent}
+
 Coming back to descent, we can say that families $\Mor{E}{X_\infty}$ are the
 same as maps $\Mor{\Yo{X_\infty}}{\UU}$; by reindexing, we obtain maps
 $\Mor{X_k}{\UU}$ for each $k:K$. Going the other direction, can we start from
@@ -160,13 +162,27 @@ Yoneda embedding of the colimit? This is descent. Phrasing this more precisely, 
 \[
   \Mor{\Hom{\Yo{\colim X}}{\UU}}{\Hom{\colim \Yo{X}}{\UU}}
 \]
-to be an equivalence of categories. We can pull the colimit out of the hom as a limit, and
-then this equivalence is calculated to the more familiar descent condition
-$\lim_i\Hom{\Yo{X_i}}{\UU} \simeq \Hom{\Yo{\colim_i{X_i}}}{\UU}$, i.e.\ $\lim_i{(C/X_i)}
-\simeq C/{\colim_i X_i}$. There is an obvious adjunction here, given by
-reindexing and colimit. \emph{Descent says that this adjunction is an
-equivalence.}
+to be an equivalence of categories.
 
+We can pull the colimit out of the hom as a limit, and then this equivalence is
+calculated to the more familiar descent condition $\lim_i\Hom{\Yo{X_i}}{\UU}
+\simeq \Hom{\Yo{\colim_i{X_i}}}{\UU}$, i.e.\ $\lim_i{(C/X_i)} \simeq
+C/{\colim_i X_i}$. There is an obvious adjunction here, given by reindexing and
+colimit. \emph{Descent says that this adjunction is an equivalence.}
 
+\subsection{2 conditions}
+
+Start with $\Mor{E}{X_\infty}$ and then pull it back to get the fiber product
+$E\times_{X_\infty} X_j$ and take the colimit; that $E=\colim_j
+E\times_{X_\infty} X_j$ is called the \emph{universality of colimits}. This is
+satisfied by any cocomplete, locally Cartesian closed category.
+
+The hard direction is when you start from a family of maps $\Mor{E_i}{X_i}$,
+take the colimit, and then pull it back. We want $(\colim_i
+E_i)\times_{X_\infty} E_j = E_j$ for each $j$; Mathieu calls this condition
+\emph{effectivity}, by analogy with the effectivity of equivalence relations in
+classical topos theory.
+
+$n$-categories do not have descent; $\infty$-categories can have descent.
 
 \end{document}
