--- a/topo-logie.tex
+++ b/topo-logie.tex
@@ -3,39 +3,10 @@
 \usepackage{xparse}
 \usepackage{jon-tikz}
 \usepackage{jon-memoir}
+\usepackage{jon-biblatex}
 
 \DeclareMathOperator\colim{colim}
-
-
-\title{The theory of logoi (M.\ Anel)}
-\author{Notes by Jon Sterling}
-\date{August 9, 2019}
-
-\begin{document}
-\maketitle
-\tableofcontents*
-
-\bigskip
-
-\para
-In these notes, everything is implicitly $\infty$-categorical; 1-categories
-are explicitly marked.
-
-\para
-A topos is a space defined by a \emph{logos of sheaves}; a logos is an algebraic structure on the category of sheaves on a space.
-
-
 \NewDocumentCommand\SET{}{\mathbf{Set}}
-
-\para The dichotomy between sets and classes is not enough to handle category
-theory.  An inaccessible cardinal is a cardinal $\alpha$ such that
-$\SET_{<\alpha}$ is stable under dependent product and sum. We will use the
-terms atomic (subsingleton), finite, small, normal, large for several strictly
-increasing scales of inaccessible cardinal.  The category of small categories
-is a normal category.
-
-
-\section{Free cocompletion}
 \NewDocumentCommand\CC{}{\mathbb{C}}
 \NewDocumentCommand\Psh{m}{\mathbf{P}(#1)}
 \NewDocumentCommand\BigPsh{m}{\overline{\mathbf{P}}(#1)}
@@ -48,6 +19,52 @@ is a normal category.
 \NewDocumentCommand\CAAT{}{\mathbb{CAT}}
 \NewDocumentCommand\Pres{}{\mathbf{Pres}}
 \NewDocumentCommand\Loc{mm}{\mathbf{L}(#1,#2)}
+\NewDocumentCommand\UU{}{\mathbb{U}}
+\NewDocumentCommand\U{}{\mathrm{U}}
+
+\DeclareFontFamily{U}{min}{}
+\DeclareFontShape{U}{min}{m}{n}{<-> dmjhira}{}
+\NewDocumentCommand{\hirayo}{}{\text{\usefont{U}{min}{m}{n}\symbol{'110}}}
+\NewDocumentCommand\Yo{s g}{%
+  \mkern-4mu\hirayo%
+  \IfValueT{#2}{%
+    \IfBooleanTF{#1}{
+      \parens{#2}
+    }{#2}
+  }%
+}
+
+
+\addbibresource{references/refs.bib}
+
+\title{The theory of logoi (M.\ Anel)}
+\author{Notes by Jon Sterling}
+\date{August 9, 2019}
+
+\begin{document}
+\maketitle
+
+These notes were prepared by Jon Sterling from a lecture of Mathieu Anel at
+Homotopy Type Theory 2019; all mistakes are my own. See \citet{anel-joyal:2019}
+for more detailed material on this topic.
+
+\para
+In these notes, everything is implicitly $\infty$-categorical; 1-categories
+are explicitly marked.
+
+\para
+A topos is a space defined by a \emph{logos of sheaves}; a logos is an algebraic structure on the category of sheaves on a space.
+
+
+\para The dichotomy between sets and classes is not enough to handle category
+theory.  An inaccessible cardinal is a cardinal $\alpha$ such that
+$\SET_{<\alpha}$ is stable under dependent product and sum. We will use the
+terms atomic (subsingleton), finite, small, normal, large for several strictly
+increasing scales of inaccessible cardinal.  The category of small categories
+is a normal category.
+
+
+\section{Free cocompletion}
 
 \para Let a category $C$ be called \emph{cocomplete} if for any small category $K$, the
 functor of constant diagrams $\Mor{C}{C^K}$ has a left adjoint.
@@ -75,21 +92,6 @@ maps.
  verified within a specific \emph{model} of $\infty$-categories, such as
  quasicategories.
 
-\NewDocumentCommand\UU{}{\mathbb{U}}
-\NewDocumentCommand\U{}{\mathrm{U}}
-\DeclareFontFamily{U}{min}{}
-\DeclareFontShape{U}{min}{m}{n}{<-> dmjhira}{}
-\NewDocumentCommand{\hirayo}{}{\text{\usefont{U}{min}{m}{n}\symbol{'110}}}
-
-
-\NewDocumentCommand\Yo{s g}{%
-  \mkern-4mu\hirayo%
-  \IfValueT{#2}{%
-    \IfBooleanTF{#1}{
-      \parens{#2}
-    }{#2}
-  }%
-}
 
 
 \section{Logos and descent}
@@ -165,5 +167,7 @@ classical topos theory.
 
 \para
 $n$-categories do not have descent; $\infty$-categories can have descent.
+
+\printbibliography
 
 \end{document}
