--- a/jon-biblatex.sty
+++ b/jon-biblatex.sty
@@ -1,4 +1,4 @@
-\RequirePackage[natbib=true,maxnames=1000]{biblatex}
+\RequirePackage[natbib=true,style=alphabetic,maxnames=1000]{biblatex}
 
 \DeclareSourcemap{
   \maps[datatype=bibtex]{
