--- a/topo-logie.tex
+++ b/topo-logie.tex
@@ -44,9 +44,11 @@
 \begin{document}
 \maketitle
 
+\begin{abstract}
 These notes were prepared by Jon Sterling from a lecture of Mathieu Anel at
 Homotopy Type Theory 2019; all mistakes are my own. See \citet{anel-joyal:2019}
 for more detailed material on this topic.
+\end{abstract}
 
 \para
 In these notes, everything is implicitly $\infty$-categorical; 1-categories
