--- a/jon-biblatex.sty
+++ b/jon-biblatex.sty
@@ -22,4 +22,4 @@
 }
 
 \RequirePackage{hyperref}
-\hypersetup{colorlinks,citecolor=gray,urlcolor=black}
+\hypersetup{colorlinks,linkcolor=black,citecolor=gray,urlcolor=black}
