--- a/topo-logie.tex
+++ b/topo-logie.tex
@@ -217,10 +217,8 @@ the desired fibers. For instance:
 
 \para In 1-$\mathbf{Gpd}$, you get an analogous counterexample from $S^1$.
 
-\para A consequence of descent in $\infty$-groupoids is that a family of spaces
-$\Sp/BG$ is the same as a functor $\Sp^{BG}$.
-
 \nocite{lurie:2009,hottbook}
 \printbibliography
 
 \end{document}
+for a group $G$.
