comment on presentability / finite-generation

--- a/topo-logie.tex
+++ b/topo-logie.tex
@@ -245,6 +245,12 @@ category $\LOGOS$ to be nice.
   \item Giraud axioms: like for $\infty$-topoi, removing presentability.
 \end{enumerate}
 
+\para There is an analogy with commutative algebra; presentable logoi are like
+finitely generated commutative rings. Grothendieck made general commutative
+rings the main object of study rather than the finitely generated ones, and
+Mathieu advocates that we do the same in topos theory; the category of general
+logoi is nicer than the category of presentable logoi.
+
 \nocite{lurie:2009,hottbook}
 \printbibliography
 
