add some brief notes from riehl

--- a/jon-notes.cls
+++ b/jon-notes.cls
@@ -15,6 +15,7 @@
 \RequirePackage{jon-tikz}
 \RequirePackage{jon-biblatex}
 \RequirePackage{cleveref}
+\RequirePackage{booktabs}
 
 
 \counterwithout{section}{chapter}
