--- a/topo-logie.tex
+++ b/topo-logie.tex
@@ -256,7 +256,7 @@ logoi is nicer than the category of presentable logoi.
 \subsection{Other examples of logoi}
 
 \para The free logos on a category: one takes $C$ to $\Sp[C] =
-\Psh{C^{\mathit{lex}}}$. In particular, the free logos on one generator $S[X]$
+\Psh{C^{\mathit{lex}}}$. In particular, the free logos on one generator $\Sp[X]$
 is $\Hom{\mathbf{Fin}}{\Sp}$.
 
 \para If $T$ is a Lawvere theory, then it is a category with finite products.
